# gaze

./: .gitignore  Makefile  README-PACKAGE.md  README.md  pyproject.toml
docs/plans/: 2026-05-15-fake-prototype-implementation-plan.md  2026-05-17-private-daily-driver-beta-action-plan.md  gaze-task-graphs.md
docs/product/: 2026-05-17-private-daily-driver-beta-design-spec.md  gaze-prd-mvp.md
docs/superpowers/specs/: 2026-05-15-gaze-menu-bar-beta-design.md
docs/validation/: beta-ready-manual-validation.md  beta-ready-review.md  fake-prototype-checklist.md  local-app-bundle-checklist.md  real-trust-preview-checklist.md
src/gaze/: __init__.py  __main__.py  app.py
src/gaze/core/: __init__.py  diagnostics.py  display_geometry.py  feedback.py  prototype.py  real_trust_preview.py  state.py  target_lock.py  (+1 more)
tests/: test_activation_seam.py  test_appkit_activation.py  test_appkit_shell_model.py  test_beta_evidence.py  test_beta_ready_review.py  test_border_overlay_contract.py  test_calibration_onboarding.py  test_calibration_profile_store.py  test_core_state.py  test_display_geometry.py  test_editable_hotkeys.py  test_fake_prototype_controller.py  test_fake_targets.py  test_gaze_sample_pipeline.py  test_gaze_target_selection.py  test_global_hotkeys.py  test_hotkey_commands.py  test_import_safety.py  test_local_app_bundle.py  test_local_app_status_smoke.py  test_menu_model.py  test_pupil_tracker_adapter.py  test_real_trust_preview_controller.py  test_runtime_app_wiring.py  test_scalar_diagnostics.py  test_setup_and_developer_models.py  test_target_lock.py  test_trust_surface_polish.py  test_visible_window_provider.py
tools/: __init__.py  build_app_bundle.py  smoke_app_bundle_status_item.py
(+29 files in other folders)
