[project]
name = "gaze"
version = "0.1.0"
description = "macOS native gaze-assisted window focus app powered by PupilTracker."
readme = "README-PACKAGE.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Sage Choi", email = "sage.choi@gmail.com" }]
keywords = ["gaze-tracking", "macos", "pyobjc", "pupil-tracker", "accessibility"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS :: MacOS X",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Topic :: Desktop Environment",
  "Topic :: Scientific/Engineering :: Human Machine Interfaces",
]
dependencies = [
  "pupil-tracker>=1.0.0",
  "pyobjc-framework-Cocoa>=10.0; sys_platform == 'darwin'",
  "pyobjc-framework-Quartz>=10.0; sys_platform == 'darwin'",
]

[project.scripts]
gaze = "gaze.app:main"

[dependency-groups]
dev = [
  "pytest>=8.0",
  "ruff>=0.8",
  "ty>=0.0.1a8",
]

[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gaze"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "tools"]
addopts = "-ra"

[tool.ruff]
line-length = 100
src = ["src", "tests", "tools"]
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.ty.environment]
python-version = "3.11"
python-platform = "macos"
root = ["./src", "./tests", "./tools"]
